v.next

  Change `flow.step2_exchange` to preserve the raw `id_token` in the
	`token_response` field.

v1.3.2
  Version 1.3.2

  Quick bugfix for an issue with dict-like arguments to `flow.step2_exchange`,
    which is common in some environments (such as GAE).

v1.3.1
  Version 1.3.1

  Quick bugfix for bad error handling in from_json.

v1.3
  Version 1.3

  Added support for the Google Application Default Credentials; see
    https://developers.google.com/accounts/docs/application-default-credentials
    for more information (thanks @orestica).
  Added support for OAuth2 for devices (#3, thanks @sde-melo).
  The minimum required Python version is now 2.6.
  The `anyjson` submodule has been removed.

  - Better exception handling around missing crypto libraries (#56).
  - Improve error messages in `AccessTokenRefreshError` (#53, thanks
	@erickoledadevrel).
  - Drop uritemplate as a dependency.
  - Handle X509 certs with PyCrypto (#51, thanks @liujin-google).
  - Handle additional failure types on OSX (#32, thanks @simoncadman).
  - Better unicode handling with PKCS12 passwords (#31, thanks @jterrace).
  - Better retry handling with bad server replies on refresh (#29, thanks
	@kaste).
  - Better logging for missing `refresh_token` in server replies (#21).
  - Support `login_hint` (#18, thanks @jay0lee).
  - Better overwrite options in `django_orm.Storage`. (#2, thanks
	@lraccomando).


v1.2
  Version 1.2

  The use of the gflags library is now deprecated, and is no longer a
    dependency. If you are still using the oauth2client.tools.run() function
    then include gflags as a dependency of your application or switch to
    oauth2client.tools.run_flow.
  Samples have been updated to use the new apiclient.sample_tools, and no
    longer use gflags.
  Added support for the experimental Object Change Notification, as found in
    the Cloud Storage API.
  The oauth2client App Engine decorators are now threadsafe.
