@@ -1,11 +1,5 @@
 [![Build Status](https://travis-ci.org/google/oauth2client.svg?branch=master)](https://travis-ci.org/google/oauth2client)
 
-NOTE
-====
-
-This is a work-in-progress branch to add python3 support to oauth2client. Most
-of the work was done by @pferate.
-
 This is a client library for accessing resources protected by OAuth 2.0.
 
 [Full documentation](http://google.github.io/oauth2client/)
